<resources>
    <string name="app_name">B5_2_VoVanChiThien_B1704852</string>
    <string name="txt0">Save the file</string>
    <string name="edittext1">Enter the text you want to save</string>
    <string name="btn1">SAVE TO INTERNAL STOGARE</string>
    <string name="btn3">SAVE TO EXTERNAL STOGARE</string>
    <string name="btn2">LOAD FROM INTERNAL STORAGE</string>
    <string name="btn4">LOAD FROM EXTERNAL STORAGE</string>
    <string name="btn5">HELP</string>
    <string name="txtstatic1">STATIC RESOUCRES</string>
    <string name="txtstatic2">HELP</string>
</resources>